--- a/packages/app/public/index.html
+++ b/packages/app/public/index.html
@@ -1,4 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>App</title>
+    <script type="module" src="index.js"></script>
+  </head>
   <body>
     <div id="root"></div>
   </body>
